Closed Bug 467368 Opened 17 years ago Closed 17 years ago

_wfullpath implementation doesn't handle paths with "../" correctly

Categories

(Core :: General, defect)

ARM
Windows CE
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: blassey, Assigned: blassey)

Details

(Keywords: fixed1.9.1, mobile)

Attachments

(2 files)

No description provided.
Attached patch from patch queueSplinter Review
this if from our patch queue, so 3 lines of context. Let me know if you need a proper patch to review
Attachment #350773 - Flags: review?(doug.turner)
spacing is off (both extra ws added, and the indentation is wrong) can you test _wgetcwd for error? Otherwise, i think this might do the wrong thing: unsigned long len = wcslen(cwd); test for error: CeGetCanonicalPathName
Attachment #350773 - Flags: review?(doug.turner) → review-
Attached patch v2.0 patchSplinter Review
Almost identical patch - just added fixed formatting, added safety checks into function calls to _wgetcwd() and CeGetCanonicalPathName() - as per doug's comment
Attachment #352139 - Flags: review?(doug.turner)
changeset: 22818:10a2365bd525 tag: tip user: John Wolfe <wolfe@lobo.us date: Mon Dec 15 10:53:21 2008 -0800 summary: Bug 467368 - Windows Mobile _wfullpath implementation doesn't handle paths with ../ correctly I added a #error in the !30 section so that people do not chase down this bug on older SDKs. However, I do not think it matters since the shunt will not be of much real value on those SDKs as so much required stuff is missing in order to build mozilla.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Attachment #352139 - Flags: review?(doug.turner)
Doug or John, please land this on 1.9.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: