Bug 467368 - Windows Mobile  _wfullpath implementation doesn't handle paths with ../ correctly